# pvcpie

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on-publish.yml
pvcpie/: kubernetesUtils.py  main.py
